correct footer_text-box gap, correct footer text font weight, add copyright font, size, weight and color.

--- a/footer.css
+++ b/footer.css
@@ -43,13 +43,14 @@
     padding: 0 1rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 
 .footer_text{
     font-family: "Alegreya sans", sans-serif;
     font-size: 19px;
+    font-weight: 300;
     color: #444A4A;
     display: flex;
     flex-direction: column;
@@ -79,4 +80,8 @@ min-width: 189px;
 .copyright{
     position: absolute;
     left: 50%;
+    font-family: "Alegreya sans", sans-serif;
+    font-size: 19px;
+    font-weight: 300;
+    color: #444A4A;
 }
